--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,22 +13,41 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-26 Mon 09:48]
+#+CAPTION: Clock summary at [2016-09-26 Mon 10:11]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *0:26* |      |      | 100.0 |
+| *Total time*                                                                | *0:44* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 0:26   |      |      | 100.0 |
-| Active                                                                      |        | 0:26 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:26 | 100.0 |
+| Stories                                                                     | 0:44   |      |      | 100.0 |
+| Active                                                                      |        | 0:44 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:37 |  84.1 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:07 |  15.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2016-09-26 Mon 09:49]--[2016-09-26 Mon 10:00] =>  0:11
     CLOCK: [2016-09-26 Mon 09:22]--[2016-09-26 Mon 09:48] =>  0:26
 
 Updates to sprint and product backlog.
+
+*** COMPLETED Edit release notes for previous sprint                  :story:
+    CLOSED: [2016-09-26 Mon 10:08]
+    CLOCK: [2016-09-26 Mon 10:01]--[2016-09-26 Mon 10:08] =>  0:07
+
+Add github release notes for v88.
+
+Text:
+
+#+begin_src markdown
+Overview
+=======
+
+We continue our long road of internal refactorings, focusing on the ```quilt.cpp``` model. There are no user visible changes in this release.
+
+For more details see the [sprint log](https://github.com/DomainDrivenConsulting/dogen/blob/master/doc/agile/sprint_backlog_88.org).
+#+end_src
 
 *** STARTED Add formattable element                                   :story:
 
