--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -1315,6 +1315,7 @@ Previous understanding:
 
 *** POSTPONED Add includer to quilt.cpp                               :story:
     CLOSED: [2016-09-26 Mon 09:46]
+    CLOCK: [2016-09-25 Sun 17:04]--[2016-09-25 Sun 17:32] =>  0:28
     CLOCK: [2016-09-25 Sun 11:29]--[2016-09-25 Sun 11:45] =>  0:16
     CLOCK: [2016-09-25 Sun 11:01]--[2016-09-25 Sun 11:28] =>  0:27
     CLOCK: [2016-09-25 Sun 10:26]--[2016-09-25 Sun 11:00] =>  0:34
