--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -136,7 +136,8 @@ types such as =boost::filesystem::path=.
 We are adding an include to the descendants' header for no
 reason. Remove it.
 
-*** Add formattable element                                           :story:
+*** STARTED Add formattable element                                   :story:
+    CLOCK: [2016-09-26 Mon 13:26]--[2016-09-26 Mon 14:42] =>  1:16
 
 Create a top-level formattable type that is an aggregation of the
 element and the element configuration. Update workflow to output a
