--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,19 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-26 Mon 15:14]
+#+CAPTION: Clock summary at [2016-09-26 Mon 15:36]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *5:20* |      |      | 100.0 |
+| *Total time*                                                                | *5:42* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 5:20   |      |      | 100.0 |
-| Active                                                                      |        | 5:20 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:37 |  11.6 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:07 |   2.2 |
-| COMPLETED Generation of formattable is incorrect                            |        |      | 2:30 |  46.9 |
-| COMPLETED Visitor includes are incorrect                                    |        |      | 0:20 |   6.2 |
-| COMPLETED Add includer to quilt.cpp                                         |        |      | 1:46 |  33.1 |
+| Stories                                                                     | 5:42   |      |      | 100.0 |
+| Active                                                                      |        | 5:42 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:37 |  10.8 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:07 |   2.0 |
+| COMPLETED Generation of formattable is incorrect                            |        |      | 2:30 |  43.9 |
+| COMPLETED Visitor includes are incorrect                                    |        |      | 0:20 |   5.8 |
+| COMPLETED Add includer to quilt.cpp                                         |        |      | 1:46 |  31.0 |
+| COMPLETED Add reducer to quilt.cpp                                          |        |      | 0:22 |   6.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -151,27 +152,11 @@ Responsible for computing the inclusion dependencies.
   builder impls and to decide which one to use based on the
   constructor of the builder.
 
-*** Add formattable element                                           :story:
+*** COMPLETED Do not compute inclusion directives for system models   :story:
+    CLOSED: [2016-09-26 Mon 15:23]
 
-Create a top-level formattable type that is an aggregation of the
-element and the element configuration. Update workflow to output a
-list of formattable and formatters to take in formattable.
-
-Previous understanding:
-
-- create a top-level type that has formatter, element properties and
-  element. Must be non-generatable. Add formattable id as the sum of
-  element id and formatter id.
-- add =formattables::model= as an unordered map of id to
-  formattable. Implement formatting workflow in terms of formattables
-  model. Add all context properties to model such as
-  streaming_settings_repository and helpers_. element_settings should
-  be merged with configuration.
-- remove formatting context and update formatting workflow to call a
-  visitor to resolve the element and then call the formatter.
-- add an enablement map for all formatters in the formatter
-
-*** Do not compute inclusion directives for system models             :story:
+*Rationale*: Fixed with new inclusion expander. We only compute
+directives as a last resort.
 
 It seems we are computing inclusion directives and other path
 derivatives for system models:
@@ -195,14 +180,11 @@ need to create a story to clean up the =origin_type= and
 =generation_type= and then we can make use of it to determine if we
 need to compute inclusion, path etc or not.
 
-*** Tidy-up of inclusion terminology                                  :story:
+*** COMPLETED Add reducer to quilt.cpp                                :story:
+    CLOSED: [2016-09-26 Mon 15:36]
+    CLOCK: [2016-09-26 Mon 15:14]--[2016-09-26 Mon 15:36] =>  0:22
 
-Random notes:
-
-- imports and exports
-- some types support both (headers)
-- some support imports only (cpp)
-- some support neither (cmakelists, etc).
+Removes all types that are non-generatable.
 
 *** Add path generator to quilt.cpp                                   :story:
 
@@ -261,6 +243,26 @@ Interestingly we could have different defaults for formatters in proxy
 models. For example, if a model is proxy we can assume that we should
 not compute inclusion paths. This could save a lot of time when
 specifying the models in JSON.
+
+*** Add formattable element                                           :story:
+
+Create a top-level formattable type that is an aggregation of the
+element and the element configuration. Update workflow to output a
+list of formattable and formatters to take in formattable.
+
+Previous understanding:
+
+- create a top-level type that has formatter, element properties and
+  element. Must be non-generatable. Add formattable id as the sum of
+  element id and formatter id.
+- add =formattables::model= as an unordered map of id to
+  formattable. Implement formatting workflow in terms of formattables
+  model. Add all context properties to model such as
+  streaming_settings_repository and helpers_. element_settings should
+  be merged with configuration.
+- remove formatting context and update formatting workflow to call a
+  visitor to resolve the element and then call the formatter.
+- add an enablement map for all formatters in the formatter
 
 *** Remove formatter id                                               :story:
 
@@ -331,6 +333,15 @@ As part of this work we need to review the need for
 used now in helper annotations repository factory, to ensure we don't
 generate annotations for the forward declarations and clobber the main
 object with it. This needs reviewing.
+
+*** Tidy-up of inclusion terminology                                  :story:
+
+Random notes:
+
+- imports and exports
+- some types support both (headers)
+- some support imports only (cpp)
+- some support neither (cmakelists, etc).
 
 *** Supply formatter's container to injector                          :story:
 
