--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,24 +13,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-26 Mon 15:36]
+#+CAPTION: Clock summary at [2016-09-26 Mon 15:39]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *5:42* |      |      | 100.0 |
+| *Total time*                                                                | *5:45* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 5:42   |      |      | 100.0 |
-| Active                                                                      |        | 5:42 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:37 |  10.8 |
+| Stories                                                                     | 5:45   |      |      | 100.0 |
+| Active                                                                      |        | 5:45 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:40 |  11.6 |
 | COMPLETED Edit release notes for previous sprint                            |        |      | 0:07 |   2.0 |
-| COMPLETED Generation of formattable is incorrect                            |        |      | 2:30 |  43.9 |
+| COMPLETED Generation of formattable is incorrect                            |        |      | 2:30 |  43.5 |
 | COMPLETED Visitor includes are incorrect                                    |        |      | 0:20 |   5.8 |
-| COMPLETED Add includer to quilt.cpp                                         |        |      | 1:46 |  31.0 |
+| COMPLETED Add includer to quilt.cpp                                         |        |      | 1:46 |  30.7 |
 | COMPLETED Add reducer to quilt.cpp                                          |        |      | 0:22 |   6.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2016-09-26 Mon 15:36]--[2016-09-26 Mon 15:39] =>  0:03
     CLOCK: [2016-09-26 Mon 09:49]--[2016-09-26 Mon 10:00] =>  0:11
     CLOCK: [2016-09-26 Mon 09:22]--[2016-09-26 Mon 09:48] =>  0:26
 
@@ -198,6 +199,15 @@ Generates the header guards.
 
 Generates the aspect configuration.
 
+*** Add helper generator to quilt.cpp                                 :story:
+
+Generates the helper configuration.
+
+*** Hook formattables into formatters                                 :story:
+
+Find a way to format out of the formattables container, side-by-side
+with the current formatting workflow.
+
 *** Check which properties need to loop through the entire model      :story:
 
 In certain cases such as helpers we probably don't need to go through
@@ -211,10 +221,6 @@ Merged stories:
 We seem to be generating a lot of element properties and formatter
 properties as well. We should only be generating these for the target
 model.
-
-*** Add helper generator to quilt.cpp                                 :story:
-
-Generates the helper configuration.
 
 *** Remove =optional<list>=                                           :story:
 
